syntax = "proto3";

option go_package="./;pb";

message NotificationProducer {
    string name = 1;
    string message  = 2;
}